# scraper

./: .env.example  Makefile  README.md  TODO.md  main.py  pyproject.toml
demo/: demo.cast  demo_tests.cast
scraper/: constants.py  formatters.py  login.py  main.py  mappers.py  parser.py  query.py
scraper/tests/: conftest.py  test_formatters.py  test_login.py  test_query.py
scraper/tests/supports/: constants.py
