[project]
name = "scraper"
version = "0.1.0"
description = "Login in site and get data from database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asciinema>=2.4.0",
    "beautifulsoup4>=4.13.4",
    "black>=25.1.0",
    "flake8>=7.3.0",
    "prettytable>=3.16.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "requests>=2.32.4",
]

[project.scripts]
scraper = "scraper.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper"]
